--- a/client/src/css/ChatPage.css
+++ b/client/src/css/ChatPage.css
@@ -6,3 +6,11 @@
     height: 100vh;
     width: 100vw;
 }
+.login__first{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+}
